--- a/hello.html
+++ b/hello.html
@@ -6,5 +6,8 @@
 </head>
 <body>
     <h1>GIT DEMO</h1>
-</body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Corporis quia aspernatur iure autem quod earum ab tempora iste, 
+        ipsam explicabo. Saepe explicabo nulla possimus, 
+        nihil quis facilis dignissimos perspiciatis autem?</p>
 </html>
